<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_title_search_country"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/menu_title_search_country"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_total_cases"
                android:title="@string/menu_label_total_cases"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_total_deaths"
                android:title="@string/menu_label_total_deaths"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_total_recovered"
                android:title="@string/menu_label_total_recovered"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>