<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ravigarbuja.covidinfo.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_padding_medium"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_padding_medium">

                <TextView
                    android:id="@+id/tv_label_summary"
                    style="@style/TextAppearance.Text.Headline.White"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Summary" />

                <TextView
                    android:id="@+id/tv_total_confirmed"
                    style="@style/TextAppearance.Text.Headline.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_large"
                    android:text="@{viewModel.totalConfirmed}"
                    app:layout_constraintStart_toStartOf="@id/tv_total_confirmed_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_summary"
                    tools:text="1162857" />

                <TextView
                    android:id="@+id/tv_total_confirmed_label"
                    style="@style/TextAppearance.Text.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_total_confirmed"
                    app:layout_constraintEnd_toStartOf="@id/tv_total_deaths_label"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_total_confirmed" />

                <TextView
                    android:id="@+id/tv_total_deaths"
                    style="@style/TextAppearance.Text.Headline.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_large"

                    android:text="@{viewModel.totalDeaths}"
                    app:layout_constraintStart_toStartOf="@id/tv_total_deaths_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_summary"
                    tools:text="63263" />

                <TextView
                    android:id="@+id/tv_total_deaths_label"
                    style="@style/TextAppearance.Text.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_total_deaths"
                    app:layout_constraintEnd_toStartOf="@id/tv_total_recovered_label"
                    app:layout_constraintStart_toEndOf="@id/tv_total_confirmed_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_total_deaths" />

                <TextView
                    android:id="@+id/tv_total_recovered"
                    style="@style/TextAppearance.Text.Headline.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_padding_large"
                    android:text="@{viewModel.totalRecovered}"
                    app:layout_constraintStart_toStartOf="@id/tv_total_recovered_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_summary"
                    tools:text="230845" />

                <TextView
                    android:id="@+id/tv_total_recovered_label"
                    style="@style/TextAppearance.Text.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_total_recovered"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_total_deaths_label"
                    app:layout_constraintTop_toBottomOf="@id/tv_total_recovered" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>